# mazer-python

./: .gitignore  CLAUDE.md  README.md  build.sh  build_app.sh  build_rust.sh  mazer.spec  pyproject.toml  test.sh
.claude/: settings.json
.planning/: PLAN.md
include/: mazer.h
src/mazer/: __init__.py  __main__.py  _ffi.py  _ffi_build.py  maze.py  types.py
src/mazer/ui/: app.py  menu.py  renderer.py
tests/: test_ffi.py  test_integration.py  test_maze.py  test_ui.py
