[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "mazer"
version = "0.0.0"
description = "Python maze game wrapping the Rust mazer library via cffi, rendered with Pygame."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Jeffrey Isabella" }]
dependencies = [
    "cffi>=1.16",
    "pygame-ce>=2.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mazer"]

[tool.hatch.build.targets.sdist]
include = [
    "src/mazer",
    "native",
    "build.sh",
    "README.md",
    "LICENSE",
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
