[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "mazer"
version = "0.0.0"
description = "Python maze game wrapping the Rust mazer library via cffi, rendered with Pygame."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Jeffrey Isabella" }]
dependencies = [
    "cffi>=1.16",
    "pygame-ce>=2.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    # cffi's compile step shells out to distutils via a shim, and distutils
    # was removed from the Python stdlib in 3.12. The shim falls back to
    # setuptools' Extension class, so setuptools is required at build time
    # (running `python -m mazer._ffi_build`) on Python 3.12+. It's a dev/
    # build dep, not a runtime dep — the resulting .so doesn't need it.
    "setuptools>=68",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mazer"]

[tool.hatch.build.targets.sdist]
include = [
    "src/mazer",
    "native",
    "build.sh",
    "README.md",
    "LICENSE",
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
